--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,24 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node.js
+node_modules/
+.next/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System
+.DS_Store
+Thumbs.db
+*.pem
+*.key
+
+# Secrets & Credentials
+gcp-service-account.json
+
+# Data Persistence (project-specific)
+ollama_data/
+pgdata/
+*.sqlite3
