revise backend and frontend to multiple answer results

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ langchain-core
 langchain-huggingface
 langchain-postgres
 sentence-transformers
+# Plotly
+plotly
 # อื่นๆ
 google-cloud-bigquery
 pandas
